@@ -1,5 +1,10 @@
 2007-02-05  Bastien Nocera  <hadess@hadess.net>
 
+	* freedesktop.org.xml.in: Add application/x-markaby mime-type for
+	"Ruby markup"-fu (Closes: #6132)
+
+2007-02-05  Bastien Nocera  <hadess@hadess.net>
+
 	* freedesktop.org.xml.in: Remove the TGA mime magic as it was bogus, and
 	the real Targa magic is at the end of the file, not at the beginning
 	(Closes: #1268)
